Cleaned Div Content The files cleaned up. New theme coded. Custom main container.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,57 @@
-.nopadding { padding: 0 !important; margin: 0 !important; }
-.clearfix:before, .clearfix:after { content: " "; display: table; }
-.clearfix:after { clear: both; }
-.clearfix { *zoom: 1; }
+/* ==========================================================================
+General Style
+========================================================================== */
+html {position: relative; min-height: 100%; min-width:100%}
+html, body{ background-color: #f4f5fc;/*Fall Back*/
+background: -moz-linear-gradient(top, rgba(247,247,247,1) 0%, rgba(229,232,249,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(247,247,247,1)), color-stop(100%,rgba(229,232,249,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(247,247,247,1) 0%,rgba(229,232,249,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(247,247,247,1) 0%,rgba(229,232,249,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(247,247,247,1) 0%,rgba(229,232,249,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(247,247,247,1) 0%,rgba(229,232,249,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#e5e8f9',GradientType=0 ); /* IE6-9 */
+}
 a { color: #282f35; -webkit-transition: all .25s ease; -moz-transition: all .25s ease; -ms-transition: all .25s ease; -o-transition: all .25s ease; transition: all .25s ease; }
 a:hover { color: #64c29e; text-decoration: none; }
-p {font-size: 14px; color: #848789; font-weight: 300; word-spacing: 2px; line-height: 1.8em; margin-top: 25px; }
+p {font-size: 14px; color: #282f35; font-weight: 300; word-spacing: 2px; line-height: 1.8em; margin-top: 25px; }
 /* ==========================================================================
-Fixed Navbar
+Fixed Header
 ========================================================================== */
-body { padding-top: 70px;}
 .navbar .navbar-nav { display: inline-block; float: none;}
 .navbar .navbar-collapse { text-align: center;}
 .navbar-default { background-color: #f4f5fc; border-color: #f4f5fc;}
-@media (min-width: 768px) { .currentpage { display: none; } }
+.navbar-default .navbar-nav > li > a {text-decoration: none;
+margin-left: 3px;
+margin-right:3px;
+border-bottom: 2px solid #FF9900;}
+.navbar-default .navbar-nav > .active > a, 
+.navbar-default .navbar-nav > .active > a:hover, 
+.navbar-default .navbar-nav > .active > a:focus  { border-bottom: 2px solid #848789;background-color: #f4f5fc;}
+/* ==========================================================================
+Main Content
+========================================================================== */
+.MainContent{ margin-top:70px; margin-bottom: 20px; padding:10px 15px 10px 15px;
+background-color: #EBECF2; box-shadow:2px 2px 3px gray; border-radius:10px;}
+.SideLine{padding-left:5px;border-left: 2px solid #FF9900;}
 /* ==========================================================================
 Sticky Footer 
 ========================================================================== */
-html {position: relative; min-height: 100%; min-width:100%}
 body {margin-bottom: 95px;}
-footer {position: absolute; bottom: 0; width: 100%; height: 95px; background-color: #f4f5fc;}
+footer {position: absolute; bottom: 0; width: 100%; height: 95px;
+background-color: #f4f5fc; background-color: rgba(244,245,252,0);}
 /* ==========================================================================
 Footer columns
 ========================================================================== */
-footer p { font-size: 13px; margin: 0; }
-.footer-leftcol { text-align: left; }
-.footer-rightcol{ text-align: right; font-style: italic;}
+footer p { font-size: 13px; color: #848789; margin: 0; }
+.footer-leftcol { text-align: left; margin-top: 28px; }
+.footer-rightcol{ text-align: right; font-style: italic; margin-top: 26px;}
 .footer-midcol { margin-left: auto; margin-right: auto;}
 .footer-midcol { text-align: center; padding: 0; }
 .footer-midcol a { opacity: 1; }
 .footer-midcol a:hover { opacity: 0.5; }
 /* ==========================================================================
-Footer Queries
+Queries
 ========================================================================== */
-@media screen and (max-width:991px) { #BigScreen {display:none;} .footer-leftcol {margin-top: 28px; } .footer-midcol {margin-top: 25px; } .footer-rightcol {margin-top: 20px; } }
-@media screen and (min-width:992px) { #SmallScreen {display:none;} .footer-leftcol {margin-top: 28px; } .footer-midcol {margin-top: 20px; } .footer-rightcol {margin-top: 20px; } }
+@media (min-width: 768px) { .navbar-brand { display: none; } }
+@media screen and (max-width:991px) { #BigScreen {display:none;}  .footer-midcol {margin-top: 25px; } .MainContent{margin-right:10%; margin-left:10%;}}
+@media screen and (min-width:992px) { #SmallScreen {display:none;} .footer-midcol {margin-top: 20px; } .MainContent{margin-right:20%; margin-left:20%;}}
