--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,7 @@ Fixed Header
 .navbar .navbar-nav { display: inline-block; float: none;}
 .navbar .navbar-collapse { text-align: center;}
 .navbar-default { background-color: #f4f5fc; border-color: #f4f5fc;}
-.navbar-default .navbar-nav > li > a {text-decoration: none;
-margin-left: 3px;
-margin-right:3px;
-border-bottom: 2px solid #FF9900;}
+.navbar-default .navbar-nav > li > a {text-decoration: none;margin-left: 3px;margin-right:3px;border-bottom: 2px solid #FF9900;}
 .navbar-default .navbar-nav > .active > a, 
 .navbar-default .navbar-nav > .active > a:hover, 
 .navbar-default .navbar-nav > .active > a:focus  { border-bottom: 2px solid #848789;background-color: #f4f5fc;}
