--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@ html {position: relative; min-height: 100%; min-width:100%}
 html, body{ background-color: #f4f5fc;/*Fall Back*/}
 a { color: #282f35; -webkit-transition: all .25s ease; -moz-transition: all .25s ease; -ms-transition: all .25s ease; -o-transition: all .25s ease; transition: all .25s ease; }
 a:hover { color: #64c29e; text-decoration: none; }
-p {font-size: 14px; color: #282f35; font-weight: 300; word-spacing: 2px; line-height: 1.8em; margin-top: 25px; }
+p {font-size: 14px; color: #282f35; font-weight: 300; word-spacing: 2px; line-height: 1.8em;}
+h1{font-size: 28px;margin-top:0px;margin-bottom:10px;}
 /* ==========================================================================
 Fixed Header
 ========================================================================== */
@@ -21,7 +22,16 @@ Main Content
 ========================================================================== */
 .MainContent{ margin-top:70px; margin-bottom: 20px; padding:10px 15px 10px 15px;
 background-color: #EBECF2; box-shadow:2px 2px 3px gray; border-radius:10px;}
-.SideLine{padding-left:5px;border-left: 2px solid #FF9900;}
+.ContentLangBar{text-align:right;}
+.LangButton{padding:1px 5px 1px 5px;border-radius:5px; background-color: #848789; border-color: #848789; color: white;}
+.ContentHeader{}
+.ContentText{padding-left:5px;border-left: 2px solid #FF9900;}
+/* ==========================================================================
+Main Content Fa
+========================================================================== */
+.ContentLangBarFa{text-align:left;}
+.ContentHeaderFa{direction:rtl;}
+.ContentTextFa{direction:rtl; padding-right:5px;border-right: 2px solid #FF9900;}
 /* ==========================================================================
 Sticky Footer 
 ========================================================================== */
