--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ a { color: #282f35; -webkit-transition: all .25s ease; -moz-transition: all .25s
 a:hover { color: #64c29e; text-decoration: none; }
 p {font-size: 14px; color: #282f35; font-weight: 300; word-spacing: 2px; line-height: 1.8em;}
 h1{font-size: 28px;margin-top:0px;margin-bottom:10px;}
+h2{font-size: 24px;margin-top:0px;margin-bottom:10px;}
 /* ==========================================================================
 Fixed Header
 ========================================================================== */
@@ -32,6 +33,14 @@ Main Content Fa
 .ContentLangBarFa{text-align:left;}
 .ContentHeaderFa{direction:rtl;}
 .ContentTextFa{direction:rtl; padding-right:5px;border-right: 2px solid #FF9900;}
+/* ==========================================================================
+Knowledge Base 
+========================================================================== */
+.panel-group{text-align:center;margin-bottom:10px;}
+.panel-default > .panel-heading,.panel-default > .panel-title{background-color: #DFE0E6;border-color:#DFE0E6;}
+.panel-body{background-color: #EBECF2;}
+.list-group-item{padding-top:5px;background-color: #f4f5fc;border-color:#f4f5fc;}
+.list-group-item > a{text-decoration: none;line-height: 1.8em;padding:0px 3px 5px 3px;border-bottom: 2px solid #FFC773;}
 /* ==========================================================================
 Sticky Footer 
 ========================================================================== */
