--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,13 @@ Main Content
 background-color: #EBECF2; box-shadow:2px 2px 3px gray; border-radius:10px;}
 .ContentLangBar{text-align:right;}
 .LangButton{padding:1px 5px 1px 5px;border-radius:5px; background-color: #848789; border-color: #848789; color: white;}
-.ContentHeader{}
+.ContentHeader{text-align:center;}
 .ContentText{text-align:justify;padding-left:5px;border-left: 2px solid #FF9900;}
 /* ==========================================================================
 Main Content Fa
 ========================================================================== */
 .ContentLangBarFa{text-align:left;}
-.ContentHeaderFa{direction:rtl;}
+.ContentHeaderFa{text-align:center;direction:rtl;}
 .ContentTextFa{text-align:justify;direction:rtl; padding-right:5px;border-right: 2px solid #FF9900;}
 /* ==========================================================================
 Knowledge Base 
