--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,12 @@
 /* ==========================================================================
 Fonts
 ========================================================================== */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans'), local('OpenSans'), url(http://www.kaykanloo.com/fonts/opensans.woff) format('woff');
-}
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(http://www.kaykanloo.com/fonts/opensansitalic.woff) format('woff');
-}
-@font-face {
-font-family: 'BNazanin';
-src: url('http://www.kaykanloo.com/fonts/BNazanin.woff') format('woff');
-}
+@font-face { font-family: 'Open Sans'; font-style: normal; font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url(http://www.kaykanloo.com/fonts/opensans.woff) format('woff');}
+@font-face { font-family: 'Open Sans'; font-style: italic; font-weight: 400;
+  src: local('Open Sans Italic'), local('OpenSans-Italic'), url(http://www.kaykanloo.com/fonts/opensansitalic.woff) format('woff');}
+@font-face {font-family: 'BNazanin';
+src: url('http://www.kaykanloo.com/fonts/BNazanin.woff') format('woff');}
 /* ==========================================================================
 General Style
 ========================================================================== */
@@ -46,6 +36,7 @@ background-color: #EBECF2; box-shadow:2px 2px 3px gray; border-radius:10px;}
 .LangButton{padding:1px 5px 1px 5px;border-radius:5px; background-color: #848789; border-color: #848789; color: white;}
 .ContentHeader{font-style: italic; text-align:center;}
 .ContentText{text-align:justify;padding-left:5px;border-left: 2px solid #FF9900;}
+.ContentTextCenter{text-align:center;padding-left:5px;border-left: 2px solid #FF9900;padding-right:5px;border-right: 2px solid #FF9900;}
 /* ==========================================================================
 Main Content Fa
 ========================================================================== */
@@ -53,6 +44,8 @@ Main Content Fa
 .ContentHeaderFa h1{font-family: BNazanin,'BNazanin'; font-size: 30px;text-align:center;direction:rtl;}
 .ContentTextFa{padding-right:5px;border-right: 2px solid #FF9900;}
 .ContentTextFa p{font-family: BNazanin,'BNazanin'; font-size: 18px;text-align:justify;direction:rtl;}
+.ContentTextCenterFa{padding-left:5px;border-left: 2px solid #FF9900;padding-right:5px;border-right: 2px solid #FF9900;}
+.ContentTextCenterFa p{font-family: BNazanin,'BNazanin'; font-size: 18px;text-align:center;direction:rtl;}
 /* ==========================================================================
 Knowledge Base 
 ========================================================================== */
