--- a/css/styles.css
+++ b/css/styles.css
@@ -42,14 +42,14 @@ background: linear-gradient(to bottom,  rgba(249,250,255,1) 0%,rgba(234,235,242,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9faff', endColorstr='#eaebf2',GradientType=0 ); /* IE6-9 */}
 .ContentLangBar{text-align:right;}
 .LangButton{padding:1px 5px 1px 5px;border-radius:5px; background-color: #848789; border-color: #848789; color: white;}
-.ContentHeader{font-style: italic; text-align:center;}
+.ContentHeader{font-style: italic; text-align:center;padding-bottom:10px}
 .ContentText{text-align:justify;padding-left:5px;border-left: 2px solid #FF9900;}
 .ContentTextCenter{text-align:center;padding-left:5px;border-left: 2px solid #FF9900;padding-right:5px;border-right: 2px solid #FF9900;}
 /* ==========================================================================
 Main Content Fa
 ========================================================================== */
 .ContentLangBarFa{text-align:left;}
-.ContentHeaderFa h1{font-family: BNazanin,'BNazanin'; font-size: 30px;text-align:center;direction:rtl;}
+.ContentHeaderFa h1{font-family: BNazanin,'BNazanin'; font-size: 30px;text-align:center;direction:rtl;padding-bottom:10px}
 .ContentTextFa{padding-right:5px;border-right: 2px solid #FF9900;}
 .ContentTextFa p{font-family: BNazanin,'BNazanin'; font-size: 18px;text-align:justify;direction:rtl;}
 .ContentTextCenterFa{padding-left:5px;border-left: 2px solid #FF9900;padding-right:5px;border-right: 2px solid #FF9900;}
