--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ Knowledge Base
 {border: 2px solid gray;border-radius:7px;text-align:center;vertical-align:middle;line-height: 1.8em;}
 .KBContent,.KBIdeas, .KBSoftEng, .KBWrapper, .KBEss, .KBOtherTop, .KBOtherBott, .KBBeyond,
 .KBEssCell, .KBOtherTopCell, .KBOtherBottCell{margin:2px 0px;}
+.CompSci{border: 2px dashed #888;border-radius:7px;padding:0px 2px;}
 .KBContent  .list-group{text-align:center;margin-bottom:0px;}
 .KBContent  .list-group-item{padding-top:5px;background-color: #f4f5fc;border-color:#f4f5fc;}
 .KBContent  .list-group-item > a{text-decoration: none;line-height: 1.8em;padding:0px 3px 5px 3px;border-bottom: 2px solid #FFC773;}
