Contact page email style
gray dot and at

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,10 @@ Knowledge Base Pages
 .breadcrumb{background-color: #DFE0E6;color:#777;}
 .breadcrumb > li + li:before{color:#777;}
 /* ==========================================================================
+Contact Page
+========================================================================== */
+.GrayText{color:gray;}
+/* ==========================================================================
 Sticky Footer 
 ========================================================================== */
 body {margin-bottom: 95px;}
