Contact page email style
Improving appearance

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ Knowledge Base Pages
 /* ==========================================================================
 Contact Page
 ========================================================================== */
+.EmailAddress{font-family: 'Open Sans', sans-serif;font-size: 14px;}
 .GrayText{color:gray;}
 /* ==========================================================================
 Sticky Footer 
