--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ p {font-size: 14px; color: #282f35; font-weight: 300; word-spacing: 2px; line-he
 h1{font-size: 28px;margin-top:0px;margin-bottom:10px;}
 h2{font-size: 24px;margin-top:0px;margin-bottom:10px;}
 h3{font-size: 20px;margin-top:0px;margin-bottom:10px;}
+h4{font-size: 16px;margin-top:0px;margin-bottom:10px;}
 /* ==========================================================================
 Fixed Header
 ========================================================================== */
@@ -53,6 +54,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9faff', end
 .ContentTextCenter{text-align:center;padding-left:5px;border-left: 2px solid #FF9900;padding-right:5px;border-right: 2px solid #FF9900;}
 .ContentTextCenterFa{padding-left:5px;border-left: 2px solid #FF9900;padding-right:5px;border-right: 2px solid #FF9900;}
 .ContentTextCenterFa p{font-family: BNazanin,'BNazanin'; font-size: 18px;text-align:center;direction:rtl;}
+/* ==========================================================================
+Resume Page
+========================================================================== */
+#ResumeKeywords h3, #ResumeName  h4, #ResumeAddress h4 { color:gray;}
 /* ==========================================================================
 Knowledge Base 
 ========================================================================== */
@@ -114,3 +119,6 @@ Queries
 .KBEssCell, .KBOtherTopCell, .KBOtherBottCell{display:table-cell;}
 .KBEss, .KBOtherTop, .KBOtherBott{display:table-row;width:100%;}
 .KBWrapper{display:table;width:100%}}
+/* Resume Header */
+@media screen and (max-width:767px) { #ResumeName  h4{text-align:center;} #ResumeAddress h4{text-align:center;} }
+@media screen and (min-width:768px) { #ResumeName  h4{text-align:left;} #ResumeAddress h4{text-align:right;} }
