Sample Content: Math support
Math Support added. A new well structured sample content added , too.

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ Knowledge Base Pages
 ========================================================================== */
 .breadcrumb{background-color: #DFE0E6;color:#777;}
 .breadcrumb > li + li:before{color:#777;}
+#MarkDownSrc{Display:none;}
 /* ==========================================================================
 Contact Page
 ========================================================================== */
