Sample Content: improving appearance
The style for sample content elements added.

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9faff', end
 .LangButton{padding:1px 5px 1px 5px;border-radius:5px; background-color: #848789; border-color: #848789; color: white;}
 .ContentHeader{font-style: italic; text-align:center;padding-bottom:10px}
 .ContentHeaderFa h1{font-family: BNazanin,IRNazanin,'BNazanin'; font-size: 30px;text-align:center;direction:rtl;padding-bottom:10px}
-.ContentText{text-align:justify;padding-left:5px;border-left: 2px solid #FF9900;}
-.ContentTextFa{padding-right:5px;border-right: 2px solid #FF9900;}
+.ContentText{text-align:justify;padding-left:7px;border-left: 2px solid #FF9900;}
+.ContentTextFa{padding-right:7px;border-right: 2px solid #FF9900;}
 .ContentTextFa p{font-family: BNazanin,IRNazanin,'BNazanin'; font-size: 18px;text-align:justify;direction:rtl;}
 .ContentTextCenter{text-align:center;padding-left:5px;border-left: 2px solid #FF9900;padding-right:5px;border-right: 2px solid #FF9900;}
 .ContentTextCenterFa{padding-left:5px;border-left: 2px solid #FF9900;padding-right:5px;border-right: 2px solid #FF9900;}
@@ -89,6 +89,21 @@ Knowledge Base Pages
 .breadcrumb{background-color: #DFE0E6;color:#777;}
 .breadcrumb > li + li:before{color:#777;}
 #MarkDownSrc{Display:none;}
+#MarkDownDes h1,h2,h3, h4 , h5 , h6{margin-bottom:0px;}
+#MarkDownDes h1{ font-size:24px;}
+#MarkDownDes h1:after { content: ""; display: block;}
+#MarkDownDes hr, #MarkDownDes h1:after{height:2px; margin: 3px 0px 5px;
+background: -moz-linear-gradient(left,  rgba(81,81,81,1) 0%, rgba(125,185,232,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(81,81,81,1)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(left,  rgba(81,81,81,1) 0%,rgba(125,185,232,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left,  rgba(81,81,81,1) 0%,rgba(125,185,232,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left,  rgba(81,81,81,1) 0%,rgba(125,185,232,0) 100%); /* IE10+ */
+background: linear-gradient(to right,  rgba(81,81,81,1) 0%,rgba(125,185,232,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#515151', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */}
+#MarkDownDes h2{ font-size:18px;font-weight:bold;}
+#MarkDownDes h3, h4 , h5 , h6{ font-size:15px;font-weight:bold;}
+#MarkDownDes p{ text-indent: 7px;}
+#MarkDownDes a{ border-bottom: 2px dotted gray;}
 .hljs{background:rgb(247,247,247);}
 /* ==========================================================================
 Contact Page
